Ignore HID elements in extraneous application collections on OSX

Even though we only ask HID manager for devices that have relevant usage
numbers, matching devices may have elements that aren't in the collections
that we care about. These irrelevant elements take up valuable slots in
the WebGamepad object and crowd out the elements that we actually want.

The Nvidia Shield controller falls victim to these extra elements, which
prevent most of the gamepad controls from being usable at all.

BUG=607401
TEST=HTML5 Gamepad API test with Nvidia Shield controller

Review-Url: https://codereview.chromium.org/1925953002
Cr-Commit-Position: refs/heads/master@{#390420}

Former-commit-id: d908daba0f7dc5ae548a6c7e4719ec004f4bf10e